--- a/p1/boston_housing.ipynb
+++ b/p1/boston_housing.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
       "Maximum price: $1024800.0\n",
       "Mean price: $454342.9447852761\n",
       "Median price $438900.0\n",
-      "Standard deviation of prices: $165340.27765266786\n"
+      "Standard deviation of prices: $165171.13\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
     "median_price = prices.median()\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print(\"Statistics for Boston housing dataset:\\n\")\n",
@@ -128,7 +128,7 @@
     "print(\"Maximum price: ${}\".format(maximum_price))\n",
     "print(\"Mean price: ${}\".format(mean_price))\n",
     "print(\"Median price ${}\".format(median_price))\n",
-    "print(\"Standard deviation of prices: ${}\".format(std_price))"
+    "print(\"Standard deviation of prices: ${0:.2f}\".format(std_price))"
    ]
   },
   {
@@ -441,9 +441,9 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "When the model is trained to the maxium depth of 1, it suffers from high bias, which mean the model is too general to capture the main trends in data.\n",
+    "When the model is trained to the maxium depth of 1, it suffers from high bias, which mean the model is too general to capture the main trends in data. We see on the graph the model with max_depth=1 is perfoming poorly (the score is only 0.4), since it fails to generalize our data well due to high bias. \n",
     "\n",
-    "When the model is trained with the maximum depth of 10, it suffers from overfitting, which we can see from the model compllexity graph: at the max_depth of 10, model training score is very high, being close to 1.0, however when the model predicts the unseen data, the score drops to 0.6, which basically means the model memorises the patterns in training data and cannot generalize well enough and make good predictions."
+    "When the model is trained with the maximum depth of 10, it suffers from overfitting, which we can see from the model compllexity graph: at the max_depth of 10, model training score is very high, being close to 1.0, however when the model predicts the unseen data, the score drops to 0.6, which basically means the model memorises the patterns in training data and cannot generalize well enough and make good predictions. On the graph, the considerable distance between training and validation scores for the model with max_depth = 10 illustrates that our model is too complex to capture the patterns in unseen data and make good predictions. "
    ]
   },
   {
@@ -493,9 +493,16 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "Grid search is a method of model hyperparameters tuning, when the values of hyperparametres are arranged in the grid and we are searching for the combination of the values which produces the highest score (within the given  metric). \n",
+    "Grid search is an exhaustive search for the best combination of hyperparameters values of a model that maximizes the score within a given metric. \n",
     "\n",
-    "In order to optimize leaning algorithm using GridSearch technique, we need to choose hyperparameters we would like to tune and manually specify possible values of each hyperparam, we also need provide scoring function and define the learning algorithm itself."
+    "It takes a manually defined range of possible values of model hyperparams, a model instance and a metric that we need to maximize as an input, builds a model with each possible combination of hyperparams, fitting provided data and calculates the score of each of these experiments. \n",
+    "\n",
+    "The output could be:\n",
+    "- trained model with the hyperparameters combination that produced the highest score; (in sklearn it is called with the GridSearchCV attribute `.best_estimator_`)\n",
+    "- the best combination of model hyperparams, that produced the highest score (`.best_params_` attribute in sklearn GridSearchCV)\n",
+    "- the mean score obtained from the best model (`.best_score_` attribute in sklearn GridSearchCV)\n",
+    "\n",
+    "Since the grid search method relies on the score to select the best params, it is important to define a metrics so it can calculate the score within this defined metrics. For this purpose we can consruct custom scoring function or select one of the common metrics (f1_score, precision , recall, accuracy etc)\n"
    ]
   },
   {
@@ -522,7 +529,17 @@
     "K-fold cross validation is a technique, when the dataset is divided into k parts, then model trained on k-1 parts and tested on the k-th part, the procedure is repeated k times, each time selecting diffent k-th chunk for testing.\n",
     "After running k experiments, the average score is calculated.\n",
     "\n",
-    "The main advantage of k-fold cross validation techinique is that eventually we use the whole dataset to train and test our model without overfitting it, this becomes particulary important when we don't have much data and splitting into separate training and testing sets and thus reducing number of training points might lead to insufficient data to train the model. Certainly, we also cannot train and test our model on the same data as it will cause model overfit. "
+    "K-folds enhances GridSearch results of model hyperparams tuning, as it provides additional layer of data for model validation, resulting in better optimized model, which was efficiently tuned, trained, validated and tested on the same dataset. \n",
+    "\n",
+    "GridSearch + K-fold cross validation could be used together as following : \n",
+    "\n",
+    "The training set could be split into K folds, where (k-1) folds is a training set A and K-th fold is testing set B. \n",
+    "\n",
+    "Training set A could be then randomly split further into j folds, with (j-1) being trainng subset C and j-th fold being test subset D. \n",
+    "\n",
+    "We run j experiments on subsets and within each experiments we construct and fit models with different hyperparams, calculate scoring after each experiment and eventually select the model with hyper params that produced the highest score within given scoring metric. Then we can validate the best estimator perfomance on training and testing sets A and B running k experiments. \n",
+    "\n",
+    "As a result of using Grid Search in conjunction with k-fold cross validation, we got better optimized model, trained, validated and tested on the same data without being overfit to it. "
    ]
   },
   {
@@ -808,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
