select ML algorithms for the task

--- a/p2/finding_donors.ipynb
+++ b/p2/finding_donors.ipynb
@@ -932,18 +932,41 @@
    "source": [
     "**Answer: **\n",
     "\n",
-    "1. Stochastic Gradient Descent Classifier\n",
+    "1. Stochastic Gradient Descent Classifier \n",
     "\n",
-    "    - **real-world application** : \n",
+    "    - **real-world application** : Big Data, text classification (spam filtering), natural language processing [2]\n",
     "\n",
-    "    - **strengths**:\n",
+    "    - **strengths**: fast and efficient for working with big data\n",
     "\n",
-    "    - **weaknesses**:\n",
+    "    - **weaknesses**: slow convergence, sensitive to feature scaling\n",
     "\n",
-    "    - **why this model**:\n",
+    "    - **why this model**: our dataset is comparatively small but it will be interesting to compare the results of SGDClassifier withe other linear models tha use GD techniques for minimizing loss function. \n",
     "\n",
     "2. Support Vector Machines(SVM)\n",
-    "3. Logistic Regression"
+    "\n",
+    "     - **real-world application**: text classification, image recognition, face detection, bioinformatics [3]\n",
+    "\n",
+    "    - **strengths**: can hangle data that is liearly separable\n",
+    "\n",
+    "    - **weaknesses**: works slowly on big data, \n",
+    "\n",
+    "    - **why this model**: \n",
+    "    \n",
+    "3. Logistic Regression\n",
+    "\n",
+    "     - **real-world application** : medical outcomes, social sciences, ad-tech, image segmentation and categorization\n",
+    "\n",
+    "    - **strengths**: can be used on big data, low variance\n",
+    "    \n",
+    "    - **weaknesses**: poor hangling of categorical data, high bias, cannot handle data that is not liearly separable\n",
+    "\n",
+    "    - **why this model**: ;\n",
+    "\n",
+    "\n",
+    "\n",
+    "1. https://www.maths.ed.ac.uk/~prichtar/papers/Papamakarios.pdf \n",
+    "2. http://www.designemergente.org/emergence/common-supervised-learning-models-pros-and-cons\n",
+    "3. https://data-flair.training/blogs/applications-of-svm/"
    ]
   },
   {
