add scrip for P2

--- a/p2/finding_donors.ipynb
+++ b/p2/finding_donors.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f0ad5f9ff60>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fefd5b59c18>"
       ]
      },
      "execution_count": 5,
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1041,9 @@
     "       \n",
     "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
-    "    # print(results)    \n",
+    "    for k, v in results.items():\n",
+    "        print(k, v)\n",
+    "        print()\n",
     "    # Return the results\n",
     "    return results"
    ]
@@ -1064,24 +1066,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
+      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "SGDClassifier trained on 361 samples.\n",
+      "train_time 0.0038645267486572266\n",
+      "\n",
+      "pred_time 0.0025110244750976562\n",
+      "\n",
+      "acc_train 0.87\n",
+      "\n",
+      "acc_test 0.8081813156440022\n",
+      "\n",
+      "f_train 0.7436708860759494\n",
+      "\n",
+      "f_test 0.6063252735129171\n",
+      "\n",
       "SGDClassifier trained on 3617 samples.\n",
-      "SGDClassifier trained on 36177 samples.\n"
+      "train_time 0.010509014129638672\n",
+      "\n",
+      "pred_time 0.0025343894958496094\n",
+      "\n",
+      "acc_train 0.7766666666666666\n",
+      "\n",
+      "acc_test 0.7777777777777778\n",
+      "\n",
+      "f_train 0.5610236220472441\n",
+      "\n",
+      "f_test 0.5679415721699019\n",
+      "\n",
+      "SGDClassifier trained on 36177 samples.\n",
+      "train_time 0.10267996788024902\n",
+      "\n",
+      "pred_time 0.0022389888763427734\n",
+      "\n",
+      "acc_train 0.8633333333333333\n",
+      "\n",
+      "acc_test 0.8377003869541183\n",
+      "\n",
+      "f_train 0.7278481012658227\n",
+      "\n",
+      "f_test 0.6702386751095958\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/user/anaconda3/lib/python3.6/site-packages/sklearn/linear_model/stochastic_gradient.py:128: FutureWarning: max_iter and tol parameters have been added in <class 'sklearn.linear_model.stochastic_gradient.SGDClassifier'> in 0.19. If both are left unset, they default to max_iter=5 and tol=None. If tol is not None, max_iter defaults to max_iter=1000. From 0.21, default max_iter will be 1000, and default tol will be 1e-3.\n",
-      "  \"and default tol will be 1e-3.\" % type(self), FutureWarning)\n",
       "/home/user/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
       "  'precision', 'predicted', average, warn_for)\n",
       "/home/user/anaconda3/lib/python3.6/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples.\n",
@@ -1093,11 +1137,83 @@
      "output_type": "stream",
      "text": [
       "SVC trained on 361 samples.\n",
+      "train_time 0.014765024185180664\n",
+      "\n",
+      "pred_time 0.23441743850708008\n",
+      "\n",
+      "acc_train 0.76\n",
+      "\n",
+      "acc_test 0.7562189054726368\n",
+      "\n",
+      "f_train 0.0\n",
+      "\n",
+      "f_test 0.0\n",
+      "\n",
       "SVC trained on 3617 samples.\n",
+      "train_time 0.9657242298126221\n",
+      "\n",
+      "pred_time 2.1802978515625\n",
+      "\n",
+      "acc_train 0.8333333333333334\n",
+      "\n",
+      "acc_test 0.8326147042564953\n",
+      "\n",
+      "f_train 0.6712962962962963\n",
+      "\n",
+      "f_test 0.6712564543889845\n",
+      "\n",
       "SVC trained on 36177 samples.\n",
+      "train_time 110.9811065196991\n",
+      "\n",
+      "pred_time 17.577515602111816\n",
+      "\n",
+      "acc_train 0.8533333333333334\n",
+      "\n",
+      "acc_test 0.8371475953565506\n",
+      "\n",
+      "f_train 0.7196969696969697\n",
+      "\n",
+      "f_test 0.6744771706996605\n",
+      "\n",
       "LogisticRegression trained on 361 samples.\n",
+      "train_time 0.002187967300415039\n",
+      "\n",
+      "pred_time 0.002024412155151367\n",
+      "\n",
+      "acc_train 0.86\n",
+      "\n",
+      "acc_test 0.8186843559977889\n",
+      "\n",
+      "f_train 0.7386363636363635\n",
+      "\n",
+      "f_test 0.6288601909039865\n",
+      "\n",
       "LogisticRegression trained on 3617 samples.\n",
-      "LogisticRegression trained on 36177 samples.\n"
+      "train_time 0.012635231018066406\n",
+      "\n",
+      "pred_time 0.0020380020141601562\n",
+      "\n",
+      "acc_train 0.8466666666666667\n",
+      "\n",
+      "acc_test 0.8385848535102266\n",
+      "\n",
+      "f_train 0.703125\n",
+      "\n",
+      "f_test 0.6775067750677506\n",
+      "\n",
+      "LogisticRegression trained on 36177 samples.\n",
+      "train_time 0.250993013381958\n",
+      "\n",
+      "pred_time 0.0032472610473632812\n",
+      "\n",
+      "acc_train 0.8466666666666667\n",
+      "\n",
+      "acc_test 0.841901603095633\n",
+      "\n",
+      "f_train 0.6985294117647058\n",
+      "\n",
+      "f_test 0.6831652282416554\n",
+      "\n"
      ]
     },
     {
@@ -1107,7 +1223,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-96a0e19e6b30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# Run metrics visualization for the three supervised learning models chosen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mvs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-96a0e19e6b30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# Run metrics visualization for the three supervised learning models chosen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mvs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfscore\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;32m~/Documents/Learning/MLND/p2/visuals.py\u001b[0m in \u001b[0;36mevaluate\u001b[0;34m(results, accuracy, f1)\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m                 \u001b[0;31m# Creative plot code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m                 \u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mbar_width\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlearner\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmetric\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwidth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbar_width\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolor\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m                 \u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xticks\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0.45\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.45\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2.45\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m                 \u001b[0max\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m//\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_xticklabels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"1%\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"10%\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"100%\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
      ]
