--- a/p2/finding_donors.ipynb
+++ b/p2/finding_donors.ipynb
@@ -762,7 +762,7 @@
     "print(\"{} total features after one-hot encoding.\".format(len(encoded)))\n",
     "\n",
     "# Uncomment the following line to see the encoded feature names\n",
-    "print (encoded)"
+    "#print (encoded)"
    ]
   },
   {
@@ -934,35 +934,35 @@
     "\n",
     "1. Stochastic Gradient Descent Classifier \n",
     "\n",
-    "    - **real-world application** : Big Data, text classification (spam filtering), natural language processing [2]\n",
+    "    - **real-world application** : text classification e.g. spam filtering [2]\n",
     "\n",
-    "    - **strengths**: fast and efficient for working with big data\n",
+    "    - **strengths**: fast training and predictions, efficient for on-line training and on-line predictions\n",
     "\n",
-    "    - **weaknesses**: slow convergence, sensitive to feature scaling\n",
+    "    - **weaknesses**: slow convergence comparing to models with usual Gradient Decent optimizer, sensitive to outliers\n",
     "\n",
-    "    - **why this model**: our dataset is comparatively small but it will be interesting to compare the results of SGDClassifier withe other linear models tha use GD techniques for minimizing loss function. \n",
+    "    - **why this model**: This model was chosen for it's speed and flexibility. `sklearn` SGDC estimator offers a lot of flexibility as it implements different regularized linear models optimized with SGD, by changing `loss` parameter one can experiment and choose the model that suits a particular dataset. \n",
     "    \n",
     "\n",
     "2. Support Vector Machines(SVM)\n",
     "\n",
-    "     - **real-world application**: text classification, image recognition, face detection, bioinformatics. E.g. for face detection SVMc classify parts of the image as a face and non-face and create a square boundary around the face [3]\n",
+    "     - **real-world application**: face detection, SVM can classify parts of the image as a face and non-face and create a square boundary around the face [3]\n",
     "\n",
     "    - **strengths**: can handle both linearly and non-linearly separable data, due to convex nature \n",
     "\n",
-    "    - **weaknesses**: slow on big data, inefficient on noisy data\n",
+    "    - **weaknesses**: slow on big data, inefficient on noisy data, prone to overfitting\n",
     "\n",
-    "    - **why this model**: \n",
+    "    - **why this model**: our dataset is relatively small and clean, with all features scaled, so SVM looks like a good option. Also it would be interesting to compare performance of `sklean ` SVC and SGDC with `loss = hinge` parameter as it essentialy the same SVM model, just optimized in different ways (`SVC` is using usual gradient descent to optimize it's loss function, while `SGDC` naturaly uses Stochastic Gradient Descent as an optimizer) \n",
     "    \n",
     "    \n",
     "3. Logistic Regression\n",
     "\n",
-    "     - **real-world application** : medical outcomes, social sciences, ad-tech, image segmentation and categorization\n",
+    "     - **real-world application** : predicting ad click-through rates (CTR) in digital advertising \n",
     "\n",
-    "    - **strengths**: can be used on big data, low variance\n",
+    "    - **strengths**: works well on imbalanced classes, fast training and predictions therefore can be used working with big data and making on-line predictions, provides probabilities which might be useful for some applications\n",
     "    \n",
-    "    - **weaknesses**: poor hangling of categorical data, high bias, cannot handle data that is not liearly separable\n",
+    "    - **weaknesses**: sensitive to features scalling, cannot handle data that is not linearly separable (i.e. not separable by a hyperplane), high bias, handling categorical features migt be problematic.\n",
     "\n",
-    "    - **why this model**: ;\n",
+    "    - **why this model**: Logistic regression is fast and since we have our dataset cleaned and all features scaled and categorical features hot-encoded, this algorithm looks like a reasonlable choice. \n",
     "\n",
     "\n",
     "\n",
@@ -1181,14 +1181,14 @@
     "\n",
     "Logistic regression would be the optimal model to use for the given problem for several reasons:\n",
     "\n",
-    "1. Highest f-beta score on the testing set (close to 70%): This model also shows most stable results accross various sizes of data sets (1%, 10% and 100% of the data of training and testing sets), while other two algorithms results are not that stable : \n",
+    "1. Highest f-beta score on the full testing set (close to 70%). This model also shows most stable results accross various sizes of data sets (1%, 10% and 100% of the data of training and testing sets), while other two algorithms results are not that stable : \n",
     "\n",
-    "    - SVM produced no f-beta score on small dataset 1% size at all (considering that our dataset is heavily imbalanced and that the accuracy score of this algorithm on the same data is about 75%, I suspect, SVM simply did not predict positive class therefore both precision and recall woule be 0, so calculating tf-beta score would be 0/0, which btw is probably the reason sklearn complained that `UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples`\n",
+    "    - SVM produced no f-beta score on small dataset 1% size at all (considering that our dataset is heavily imbalanced and that the accuracy score of this algorithm on the same data is about 75%, I suspect, SVM simply did not predict positive class therefore both precision and recall was 0, so calculating f-beta score the formula would be 0/0, which btw is probably the reason sklearn complained that `UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no predicted samples`)\n",
     "\n",
     "    - SGD classifier results were lower comparing to Logistic regression (both accuracy and f-beta score), the results were also not quite stable: being lower on the small size dataset (1% and 10%) and higher on 100% size of the dataset. \n",
     "\n",
     "\n",
-    "2. Fast training and predictions: Logistic model took far less time for training and predictions comparing to SVM. However for this particular problem we might disregard slow training and prediction time since we are perfoming off-line training and off-line predictions and also because our dataset is not very large, so if SVM produced higher f-beta score and accuracy score we might use it regardless of the amount of time it took for training and predictions. On the other hand, in case of on-line predicting or large dataset, SVM in might become too computationally expensive. "
+    "2. Fast training and predictions: Logistic model took far less time for training and predictions comparing to SVM. However for this particular problem we might disregard slow training and prediction time since we are perfoming off-line training and off-line predictions and also because our dataset is not very large, so if SVM produced higher f-beta score and accuracy score we might use it regardless of the amount of time it took for training and predictions. On the other hand, in case of on-line predicting or large dataset, SVM might become too computationally expensive. "
    ]
   },
   {
@@ -1210,11 +1210,11 @@
    "source": [
     "**Answer: ** \n",
     "\n",
-    "For simpler explanation we assume describe Logistic model for binary classification task. \n",
+    "For simpler explanation we describe Logistic model for binary classification task. \n",
     "\n",
     "Unlike other types of regressions, logistic regression is used for classification. It uses the underling logistic funtcion to compute probability of the given data point belong to the positive class (in case of binary classification), which always lies between 0 and 1. [1]\n",
     "\n",
-    "The main idea of the model is that there is a line that separates nicely two classes of the dataset, so while implementing Logistic regression model, we try to find the perfect line that will do this task with minimum loss (i.e. minimum amount of the datapoints would be misclassified), in other words we try to find the weights of the equation that descibes this perfect line. To do that we use Gradient descent, a family of methods for functions optimizing,  which help us find the combination of the weights, with which our loss will be the smallest or in more mathematical terms, that will help us to find the global minimum of our loss function. \n",
+    "The main idea of the model is that there is a line that separates nicely two classes of the dataset, so while implementing Logistic regression model, we try to find the perfect line that will do this task with minimum loss (i.e. minimum amount of the datapoints would be misclassified), in other words we try to find the weights of the equation that descibes this perfect line. To do that we use Gradient descent, a family of optimization methods,  which help us find the combination of the weights, where amount of misclassified data points will be the smallest or in more mathematical terms, that will help us to find the global minimum of our loss function. \n",
     "\n",
     "\n",
     "1. https://codesachin.wordpress.com/2015/08/16/logistic-regression-for-dummies/\n",
@@ -1337,7 +1337,8 @@
    "metadata": {},
    "source": [
     "**Answer: **\n",
-    "\n"
+    "\n",
+    "The accuracy of the optimized model on the testing data 0.84, f-score is 0.68, which are almost the same as the unoptimized model, however these results are much better than results of our naive predictor computed earlier: 0.2478 and 0.2917 for accuracty and f-score respectively\n"
    ]
   },
   {
@@ -1366,11 +1367,11 @@
    "source": [
     "**Answer:**\n",
     "\n",
-    "1. Occupation - This might give us a clue who could possibly have higher income: certainly people holding executive and managerial positions are likelier to have high income than people doing \n",
+    "1. Occupation - This feature might give a clue who could possibly have higher income: certainly people holding executive and managerial positions are more likely to have high income than people doing non executive jobs.\n",
     "\n",
     "2. Age - older people tend to have higher salaries more, having more professional expertise comparing to fresh uni graduates or young people who recently started their career path\n",
     "\n",
-    "3. Hours per week - normally there is quite a linear relationship between amount of working hours and income: the more hours smbd works the higher income it has. \n",
+    "3. Hours per week - normally there is quite a linear relationship between amount of working hours and income: the more hours smbd works the higher the income. \n",
     "\n",
     "4. Workclass - possibly people who never worked and people without pay are not the candidates we are looking for, while business owners and government workers might be the ones we want to inspect a bit closer.\n",
     "\n",
@@ -1440,11 +1441,11 @@
     "**Answer:**\n",
     "\n",
     "The important features discussed in Q6 were educated guess based on the common sense.\n",
-    "The `.feature_importances_` in `sklearn` are computed based on 'gini importance' [1], which basically indicates how much each feature decreases the node impurity weighted by the probability to reach this node in a particular tree averaged across all trees in the forest [2] \n",
+    "The `.feature_importances_` in `sklearn` are computed based on 'gini importance' [1], which basically indicates how much each feature contributes to the node impurity decrease weighted by the probability to reach this node in a particular tree and then averaged across all trees in the forest [2] \n",
     "\n",
-    "Generaly guessed features are almost the same as those computed by `sklearn RandomForest` except for the Workclass and Occupation which apperantely do not contribute much to the model in this particular set of data, instead Relationship  and capital gain features appears to be more powerful.\n",
+    "Generaly guessed features are almost the same as those computed by `sklearn RandomForest` except for the Workclass and Occupation which apperantely do not contribute much to the model in this particular set of data, instead Relationship  and capital gain features appear to be more powerful.\n",
     "\n",
-    "Though guessed features were close to the computed ones, the order of the features (from more to less important) is totally different: Age feature turns out to help model to classify data much more than guessed Occupation feature, same Capital gain contributes much for the Workclass. \n",
+    "Though guessed features were close to the computed ones, the order of the features (from more to less important) is totally different: Age feature turns out to help model to classify data much more than guessed Occupation feature, same Capital gain contributes much more than the Workclass feature. \n",
     "\n",
     "\n",
     "1. https://stackoverflow.com/a/15821880\n",
@@ -1461,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1477,8 +1478,11 @@
       "------\n",
       "Accuracy on testing data: 0.8271\n",
       "F-score on testing data: 0.6499\n",
-      "Final model trained on reduced dataset traning time: 0.07413029670715332\n",
-      "Final model trained on reduced dataset prediction time 0.0004885196685791016\n"
+      "\n",
+      "Training and prediction time of the Final Model trained on reduced data\n",
+      "------\n",
+      "Final model trained on reduced dataset traning time: 0.13187170028686523\n",
+      "Final model trained on reduced dataset prediction time 0.0005159378051757812\n"
      ]
     }
    ],
@@ -1508,6 +1512,7 @@
     "print(\"\\nFinal Model trained on reduced data\\n------\")\n",
     "print(\"Accuracy on testing data: {:.4f}\".format(accuracy_score(y_test, reduced_predictions)))\n",
     "print(\"F-score on testing data: {:.4f}\".format(fbeta_score(y_test, reduced_predictions, beta = 0.5)))\n",
+    "print(\"\\nTraining and prediction time of the Final Model trained on reduced data\\n------\")\n",
     "print('Final model trained on reduced dataset traning time:', end_tr  - start_tr)\n",
     "print('Final model trained on reduced dataset prediction time', end_te - start_te)"
    ]
